# actixboot

./: .env  Cargo.toml  README.md  compose.yaml
config/: app.yaml
crates/actix_boot_repository_macros/: Cargo.toml  FEATURES_IMPLEMENTED.md  IMPLEMENTATION_PLAN.md  README.md
crates/actix_boot_repository_macros/src/: lib.rs
crates/actix_boot_repository_macros/src/generator/: filter.rs  find.rs  mod.rs  modifiers.rs  params.rs  query.rs
crates/actix_boot_repository_macros/src/parse/: mod.rs
crates/actix_boot_service_macros/: Cargo.toml
crates/actix_boot_service_macros/src/: lib.rs
example/: Cargo.toml
example/src/: main.rs
example/src/entity/: post.rs
migration/: Cargo.toml
src/: lib.rs  main.rs
src/config/: db.rs  log.rs  mod.rs  server.rs
src/di/: mod.rs
src/entity/: mod.rs  prelude.rs
src/registry/: mod.rs
src/repository/: macros.rs  mod.rs
src/server/: mod.rs
src/server/config/: mod.rs  registry.rs
src/service/: derive.rs  mod.rs
