[package]
name = "actix_boot"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["crates/actix_boot_repository_macros", "crates/actix_boot_service_macros", "migration"]

[features]
default = ["postgres"]

postgres = ["sea-orm/sqlx-postgres"]

[workspace.dependencies]
sea-orm = { version = "1.1.19", features = ["runtime-tokio-native-tls"] }

[dependencies]
actix_boot_service_macros = {path = "crates/actix_boot_service_macros" }
sea-orm = { workspace = true }
actix_boot_repository_macros = { path = "crates/actix_boot_repository_macros" }
log = "0.4.28"
dotenvy = "0.15.7"
env_logger = "0.11.8"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.33"
regex = "1.12.2"
tokio = { version = "1.48.0", features = ["full"] }
actix-web = "4.11.0"
chrono = "0.4.42"
